# fs-updater-lib

./: CMakeLists.txt  README.md  fs_updater_lib_doxy
cmake/: config.h.in
docs/: architecture.md  contributing.md  getting-started.md  main_page.md  state-machine.md
docs/integration/: rauc-system-conf.md
docs/reference/: api.md  bundle-format.md  rauc-contract.md  uboot-variables.md
documentation/: architecture.md  main_page.md
scripts/: build.sh
src/: BaseException.h  main.cpp
src/handle_update/: LIbArchiveHandle.cpp  LibArchiveHandle.h  UpdateStore.cpp  UpdateStore.h  applicationImage.cpp  applicationImage.h  fs_consts.h  fs_exceptions.h  fsupdate.cpp  fsupdate.h  handleUpdate.cpp  handleUpdate.h  updateApplication.cpp  updateApplication.h  updateBase.cpp  updateBase.h  updateDefinitions.cpp  updateDefinitions.h  updateFirmware.cpp  updateFirmware.h  utils.cpp  utils.h
src/include/: fs_updater.cpp  fs_updater.hpp  fsupdate_extern_interface.h
src/logger/: LoggerEntry.cpp  LoggerEntry.h  LoggerHandler.cpp  LoggerHandler.h  LoggerLevel.h  LoggerSinkBase.h  LoggerSinkEmpty.cpp  LoggerSinkEmpty.h  LoggerSinkStdout.cpp  LoggerSinkStdout.h
src/rauc/: rauc_handler.cpp  rauc_handler.h
src/subprocess/: subprocess.cpp  subprocess.h
src/uboot_interface/: UBoot.cpp  UBoot.h  allowed_uboot_variable_states.h
